# wandb-mlops-course

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: 01_eda.py  02_data_split.py  03_baseline.py  baseline.py  config.py  data_split.py  eda.py  utils.py
