[tool.poetry]
name = "wandb-mlops-course"
version = "0.1.0"
description = "This is a repo I made while attending Weights & Biases' MLOPs course."
authors = ["Simon Alibert <alibert.sim@gmail.com>"]
repository = "https://github.com/aliberts/wandb-mlops-course"
readme = "README.md"
packages = [{include = "wandb-mlops-course"}]

[tool.poetry.dependencies]
python = "^3.10"
wandb = "^0.13.9"
pyrallis = "^0.3.1"
fastai = "^2.7.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.2"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests
)/
'''

[tool.isort]
line_length = 100
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
